JDK 11 cleanup part 2.