@@ -76,7 +76,7 @@ public class GapFillingTextSearch
         Map<?, String> inputs = null;
         Users userutils = Users.of(thiswiki);
         if (user != null)
-            inputs = userutils.createdPagesWithText(Arrays.asList(user), 
+            inputs = userutils.createdPagesWithText(List.of(user), 
                 thiswiki.new RequestHelper().inNamespaces(Wiki.MAIN_NAMESPACE));
         else if (linksfrom != null)
         {
